--- a/templates/editProject.html
+++ b/templates/editProject.html
@@ -8,7 +8,7 @@
             <label for="description">Description:</label>
             <input type="text" name="description" placeholder="{{p.description}}"><br>
             <input type="hidden" name="project_id" value="{{p.id}}"><br>
-            <input type="submit" value="Create">
+            <input type="submit" value="Edit">
         </form>
     </div>
 
